--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,4 +20,6 @@ repos:
       additional_dependencies: [
         "numpy>=1.20",
         "gambaterm>=0.12.0",
+        "types-setuptools",
       ]
+      args: []
