--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,25 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 22.8.0
+    rev: 25.11.0
     hooks:
     - id: black
       language_version: python3
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 5.0.4
+-   repo: https://github.com/pycqa/flake8
+    rev: 7.3.0
     hooks:
     - id: flake8
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.3
+    rev: v6.0.0
     hooks:
     - id: mixed-line-ending
     - id: trailing-whitespace
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.982"
+    rev: "v1.18.2"
     hooks:
     - id: mypy
       additional_dependencies: [
         "numpy>=1.20",
-        "gambaterm>=0.12.0",
+        "gambaterm>=0.13.0",
         "types-setuptools",
       ]
       args: []
